# PDAI-A1

./: .env.example  .envrc  CLAUDE.md  README.md  app.py  main.py  pyproject.toml  requirements.txt  style.css
ai/: chat_agent.py  email_parser.py
components/: activities_editor.py  chat_panel.py  header.py  itinerary_editor.py  map_view.py  metrics_bar.py  phase_bar.py  pricing_panel.py  proposal_selector.py
data/: catalog.py  engine.py
services/: geocoding.py  route_optimizer.py
